// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConfirmModal /> render with show=false 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={false}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
    >
      Some title
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div>
      <span>
        some text
      </span>
    </div>
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <ButtonToolbar
      bsClass="btn-toolbar"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="link"
        disabled={false}
        onClick={[Function]}
      >
        Cancel
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="success"
        disabled={false}
        onClick={[Function]}
      >
        Save
      </Button>
    </ButtonToolbar>
  </ModalFooter>
</Modal>
`;

exports[`<ConfirmModal /> render with show=true 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
    >
      Some title
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div>
      <span>
        some text
      </span>
    </div>
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <ButtonToolbar
      bsClass="btn-toolbar"
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="link"
        disabled={false}
        onClick={[Function]}
      >
        Cancel
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="success"
        disabled={false}
        onClick={[Function]}
      >
        Save
      </Button>
    </ButtonToolbar>
  </ModalFooter>
</Modal>
`;
